Changelog
=========

4.2.2 (unreleased)
------------------

- Nothing changed yet.


4.2.1 (2017-11-16)
------------------

- External full text: adjusted padding. Refs #16044
  [reinhardt]
- search_rss must be called on navigation root. Refs #15955
  [reinhardt]
- Authorsearch: Only show authors of published content. Refs #16044
  [reinhardt]
- Search: Improved layout for default content types. Refs #16044
  [reinhardt]
- Search: Support disabling thematic search section. Refs #16044
  [reinhardt]


4.2.0 (2017-09-21)
------------------

- Removed legend from author search. Refs #15699
  [reinhardt]
- Pull in logo link so we can make it point to the portal URL. Refs #15816
  [reinhardt]
- Dynamic portal title in author search. Refs #15699
  [reinhardt]
- Added datenschutz view that displays Piwik opt-out. Refs #15889
  [reinhardt]
- Removed references to presentations. Refs #15699
  [reinhardt]


4.1.2 (2017-06-12)
------------------

- Removed tab "Zitierhinweise". Refs #15418
  [reinhardt]


4.1.1 (2017-01-27)
------------------

- Restored lost changes.
  [reinhardt]
- margin-top for twitter button, refs #13628
  [reinhardt]


4.1.0 (2017-01-27)
------------------

- TÃ¶chter, refs #13564, #13565, #13566, #13568, #13569, #13659, #13718
  [reinhardt]


4.0.2 (2016-07-08)
------------------

- Nothing changed yet.


4.0.1 (2016-05-23)
------------------

- Another syndication fix for Plone 4.3, refs #11785 #13624 [reinhardt]


4.0.0 (2016-04-25)
------------------

- New post-it images, refs #13370
- Removed styles for facebook like buttons, refs #13370
- Fixes for Plone 4.3, refs #11785
- removed dfg reference from footer, refs #11972
- styles for string fallback widget (doi), refs #12126
- added test_homepage


3.4.4 (2015-09-01)
------------------

- use separate lookup for ddcPlace (the bsb opac values differ from the
  internal ones), refs #10622 [reinhardt]


3.4.3 (2015-04-21)
------------------
