@@ -91,6 +91,10 @@
   <replace css:content="ul#portal-globalnav "
            css:theme="div#navigation > ul " />
 
+  <!-- social media buttons -->
+  <replace css:content="#social-media-header"
+           css:theme="#social-media-header" />
+
   <!-- Secondary navigation -->
   <prepend content="//div[@id='secondary-nav-portlet']"
            theme="//div[@id='content']" />
