@@ -41,6 +41,16 @@
 	    <a id="recensio_logo_anchor" href="/"><img src="++resource++recensio.theme.images/logo_recensio.png" alt="Recensio Logo" id="recensio_logo"/></a>
 	  </div>
 
+      <div id="social-media-header">
+          <img src="++resource++recensio.theme.images/social-media-icons.png" alt="Social Media Buttons" id="social-media-buttons-header" usemap="#socialmap-header" />
+          <map name="socialmap-header">
+              <area shape="rect" coords="0,0,30,30" alt="fb" href="https://www.facebook.com/sharer/sharer.php?u=http://www.recensio.net">
+              <area shape="rect" coords="30,0,60,30" alt="twitter" href="http://twitter.com/home?status=http://www.recensio.net">
+              <area shape="rect" coords="60,0,90,30" alt="twitter" href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http://www.recensio.net">
+              <area shape="rect" coords="90,0,120,30" alt="twitter" href="https://plus.google.com/share?url=http://www.recensio.net">
+          </map>
+      </div>
+
 	  <div id="navigation">
 	    <ul>
 		  <li class="navFirst_element"><a href="#">Rezensionen</a></li>
