@@ -4,7 +4,8 @@ Changelog
 4.2.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added social media buttons. Refs #16159
+  [reinhardt]
 
 
 4.2.1 (2017-11-16)
